--- a/CSS/w3schools.html
+++ b/CSS/w3schools.html
@@ -391,9 +391,15 @@ WHERE Country='Mexico';
             <h1>Exercises and Quizzes</h1>
             <p>Test your skills!</p>
             <div class="YG">
-                <div class="yellow"><a  href="">Exercises</a></div>
-                <div class="green"><a href="">Quizzes</a></div>
+                <div class=" green"><a class="G" href="">Exercises</a></div>
+                <div class="yellow"><a class="Y" href="">Quizzes</a></div>
             </div>
+        </div>
+        <div class="Templates white my-learning">
+           <h3>Web Templates</h3> 
+           <p>Browse our selection of free responsive HTML Templates</p>
+           <img src="C:\Users\HP\Downloads\img3.jpeg" alt="" width="950px" height="360px">
+           <a>Browse templates</a>
         </div>
     </body>
 </html>
