--- a/CSS/w3schools.html
+++ b/CSS/w3schools.html
@@ -399,7 +399,60 @@ WHERE Country='Mexico';
            <h3>Web Templates</h3> 
            <p>Browse our selection of free responsive HTML Templates</p>
            <img src="C:\Users\HP\Downloads\img3.jpeg" alt="" width="950px" height="360px">
-           <a>Browse templates</a>
+           <a>Browse Templates</a>
         </div>
+        <div class="kickstart black">
+            <p>Kickstart your career</p>
+            <p> Get certified by completing a course</p>
+            <a>Get Started</a>
+        </div>
+        <div class="section my-learning">
+            <h3>How To Section</h3>
+            <p>For example, how to create a slideshow:</p>
+            <div class="vid-div">
+                <div class="top">
+                    <div class="first-line">
+                        <div class="colors">
+                            <div class =" red dot"></div>
+                            <div class="dim-yellow dot"></div>
+                            <div class="green dot"></div>
+                        </div>
+                        <div class="trySearch">www.w3schools.com/howto/</div>
+                    </div>
+                </div>
+                <img src="C:\Users\HP\Downloads\img4.jpeg" alt="" width="890px"> 
+            </div>
+            <div></div>
+            <a>Learn how to</a>
+        </div>
+        <footer class="black">
+            <div class="footer">
+                <div class="LF">
+                    <a href="">QUIZZES</a>
+                    <a href="">EXERCISES</a>
+                    <a href="">CERTIFICATES</a>
+                    <a href="">UPGRADE</a>
+                    <a href="">SPACES</a>
+                    <a href="">SUPPORT</a>
+                    <a href="">NEWSLETTER</a>
+                </div>
+                <div class="RF">
+                    <a href="">FORUM</a>
+                    <a>|</a>
+                    <a href="">ABOUT</a>
+                </div>
+            </div>
+            <div class="icons">
+                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                <a href=""><i class="fa-brands fa-discord"></i></a>
+            </div>
+            <p>W3Schools is optimized for learning, testing, and training. Examples might be simplified to improve reading and basic understanding.
+                 Tutorials, references, and examples are constantly reviewed to avoid errors, but we cannot warrant full correctness of all content. 
+                 While using this site, you agree to have read and accepted our terms of use, cookie and privacy policy.<br>
+                Copyright 1999-2023 by Refsnes Data. All Rights Reserved.
+            </p>
+        </footer> 
     </body>
 </html>
