--- a/W3Schools_clone/w3schools.html
+++ b/W3Schools_clone/w3schools.html
@@ -408,7 +408,8 @@ WHERE Country='Mexico';
         </div>
         <div class="section my-learning">
             <h3>How To Section</h3>
-            <p>For example, how to create a slideshow:</p>
+            <p class="f1">Code snippets for HTML, CSS and JavaScript</p>
+            <p class="f2">For example, how to create a slideshow:</p>
             <div class="vid-div">
                 <div class="top">
                     <div class="first-line">
@@ -422,8 +423,10 @@ WHERE Country='Mexico';
                 </div>
                 <img src="C:\Users\HP\Downloads\img4.jpeg" alt="" width="890px"> 
             </div>
-            <div></div>
-            <a>Learn how to</a>
+            <div class="square"></div>
+            <a>Learn How To</a>
+            
+            
         </div>
         <footer class="black">
             <div class="footer">
