--- a/W3Schools_clone/w3schools.html
+++ b/W3Schools_clone/w3schools.html
@@ -10,7 +10,7 @@
         <nav>
             <div class="nav">
                 <ul class="nav-left">
-                    <img src= "C:\Users\HP\Downloads\w3-schools.jpeg" alt="icon" height="55px" width="60px">
+                    <img src= "Images/w3-schools.jpeg" alt="icon" height="55px" width="60px">
                     <li><a href="">Tutorials<i class="fa-solid fa-caret-down"></i></a></li>
                     <li><a href="">References<i class="fa-solid fa-caret-down"></i></a></li>
                     <li><a href="">Exercises<i class="fa-solid fa-caret-down"></i></a></li>
@@ -337,7 +337,7 @@ WHERE Country='Mexico';
                         </div>
                     </div>
                     <video autoplay muted>
-                        <source src="C:\Users\HP\Downloads\img1.mp4" type="video/mp4">
+                        <source src="Images/img1.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="tryGreen green">Try Frontend Editor (HTML/CSS/JS)</div>
@@ -346,9 +346,9 @@ WHERE Country='Mexico';
                 <p class="paragraph">If you want to create your own website, check out <a href="">W3Schools Spaces</a>.</p>
                 <p  class="paragraph">It is free to use, and does not require any setup:</p>
                 <video class="adrienne"autoplay muted>
-                    <source src="C:\Users\HP\Downloads\img2.mp4" type="video/mp4">
+                    <source src="Images/img2.mp4" type="video/mp4">
                 </video>
-                <img src="C:\Users\HP\Desktop\JACOB okoro\how-spaces-works3.png" alt="How it works">
+                <img src="Images/how-spaces-works3.png" alt="How it works">
                 <a class="green border-radius learn">Learn more</a>
             </div>
         </div>
@@ -356,22 +356,22 @@ WHERE Country='Mexico';
             <h1><b>My Learning</b></h1>
             <p>Track your progress with our <b>free</b> "My Learning" program.</p>
             <p>Log in to your account, and start earning points!</p>
-            <img src="C:\Users\HP\Desktop\JACOB okoro\learn.png" alt="">
+            <img src="Images/learn.png" alt="">
             <a class="green border-radius sign-up">Sign Up for Free</a>
         </div>
         <div class="pro black my-learning">
             <h1>Become a PRO User</h1>
             <p class="unlock">And unlock powerful features:</p>
             <p class="check">
-                <img src="C:\Users\HP\Desktop\JACOB okoro\check.svg" alt="">
+                <img src="Images/check.svg" alt="">
                 Browse W3Schools without ads
             </p>
             <p class="check">
-                <img src="C:\Users\HP\Desktop\JACOB okoro\check.svg" alt="">
+                <img src="Images\check.svg" alt="">
                 Website hosting (Includes <a href="" class="underline">Spaces</a> PRO)
             </p>
             <p class="check">
-                <img src="C:\Users\HP\Desktop\JACOB okoro\check.svg" alt="">
+                <img src="Images\check.svg" alt="">
                 Access to our <a href="" class="underline">HTML Video Tutorial</a>
             </p>
             <a class="green">Learn more</a>
@@ -379,12 +379,12 @@ WHERE Country='Mexico';
         <div class="light-pink my-learning">
             <h1>Color Picker</h1>
             <p>W3Schools' famous color picker:</p>
-            <img src="C:\Users\HP\Desktop\JACOB okoro\colorpicker.png" alt="">
+            <img src="Images\colorpicker.png" alt="">
         </div>
         <div class="lynx blue my-learning">
             <h3>Code Game</h3>
             <p>Help the Lynx collect pine cones!</p>
-            <img src="C:\Users\HP\Desktop\JACOB okoro\lynx.png" alt="">
+            <img src="Images\lynx.png" alt="">
             <a class= "black border-radius"href="">Play Game</a>
         </div>
         <div class="Quiz black my-learning">
@@ -398,7 +398,7 @@ WHERE Country='Mexico';
         <div class="Templates white my-learning">
            <h3>Web Templates</h3> 
            <p>Browse our selection of free responsive HTML Templates</p>
-           <img src="C:\Users\HP\Downloads\img3.jpeg" alt="" width="950px" height="360px">
+           <img src="Images\img3.jpeg" alt="" width="950px" height="360px">
            <a>Browse Templates</a>
         </div>
         <div class="kickstart black">
@@ -421,7 +421,7 @@ WHERE Country='Mexico';
                         <div class="trySearch">www.w3schools.com/howto/</div>
                     </div>
                 </div>
-                <img src="C:\Users\HP\Downloads\img4.jpeg" alt="" width="890px"> 
+                <img src="Images\img4.jpeg" alt="" width="890px"> 
             </div>
             <div class="square"></div>
             <a>Learn How To</a>
